Addressed layout shift issue.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -218,8 +218,8 @@ footer > ul > li > a:focus {
 /* ------------------------------------------------------ SLIDESHOW ------------------------------------------------------ */
 #slideshow {
     overflow: hidden;
-    height: fit-content;
-    width: 100%;
+    height: 400px;
+    width: 400px;
     margin: auto;
     position: relative;
     display: flex;
@@ -229,23 +229,29 @@ footer > ul > li > a:focus {
 
 .slide-container {
     position: relative;
-    width: 100%;
-    max-width: 300px; 
-    height: 400px; 
+    width: 340px;
+    max-width: 340px; 
+    height: 340px;
+    max-height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .slide {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    width: fit-content;
+    height: fit-content;
     opacity: 0;
     animation: fade 32s infinite;
     display: flex;
     justify-content: center;
     align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+
 
 .slide:nth-child(1) {
     animation-delay: 4s;
@@ -288,7 +294,7 @@ footer > ul > li > a:focus {
 
 .product-image {
     border-radius: 8px;
-    width: fit-content;
+    width: 300px;
     height: fit-content;
 }
 
@@ -327,6 +333,8 @@ footer > ul > li > a:focus {
 .top-rounded {
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
+    width: 300px;
+    height: fit-content;
 }
 
 .card summary {
@@ -721,6 +729,12 @@ footer > ul > li > a:focus {
         height: 55vh;
         margin: -12px auto;
         padding: 0;
+    }
+
+    .product-image {
+        border-radius: 8px;
+        width: fit-content;
+        height: fit-content;
     }
 }
 
